{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 56,
  "lineage": "befd453b-9492-b97f-6c4b-1c9848b70778",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.101.251.242",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-11-14T00:17:22.289-08:00",
            "id": "projects/devops-labs-366504/regions/asia-southeast2/addresses/vm-public-address",
            "name": "vm-public-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "devops-labs-366504",
            "region": "asia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-labs-366504/regions/asia-southeast2/addresses/vm-public-address"
          },
          "dependencies": [
            "google_compute_firewall.firewall"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-14T00:17:10.111-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-labs-366504/global/firewalls/oss-firewall-externalssh",
            "log_config": [],
            "name": "oss-firewall-externalssh",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-labs-366504/global/networks/default",
            "priority": 1000,
            "project": "devops-labs-366504",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-labs-366504/global/firewalls/oss-firewall-externalssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "externalssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "webserverrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-14T00:17:10.314-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-labs-366504/global/firewalls/oss-webserver",
            "log_config": [],
            "name": "oss-webserver",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-labs-366504/global/networks/default",
            "priority": 1000,
            "project": "devops-labs-366504",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-labs-366504/global/firewalls/oss-webserver",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "webserver"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm-oss-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": false,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20221102",
                    "size": 35,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devops-labs-366504/zones/asia-southeast2-a/disks/vm-oss-dev"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/devops-labs-366504/zones/asia-southeast2-a/instances/vm-oss-dev",
            "instance_id": "7858794757539776334",
            "label_fingerprint": "aKNSkpPXC9o=",
            "labels": {
              "env": "tfleaning"
            },
            "machine_type": "n1-standard-2",
            "metadata_fingerprint": "ue8Rg94okUc=",
            "name": "vm-oss-dev",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.101.251.242",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devops-labs-366504/global/networks/default",
                "network_ip": "10.184.0.5",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devops-labs-366504/regions/asia-southeast2/subnetworks/default",
                "subnetwork_project": "devops-labs-366504"
              }
            ],
            "project": "devops-labs-366504",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-labs-366504/zones/asia-southeast2-a/instances/vm-oss-dev",
            "service_account": [
              {
                "email": "admin-devops@devops-labs-366504.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-southeast2-a"
          },
          "dependencies": [
            "google_compute_address.static",
            "google_compute_firewall.firewall"
          ]
        }
      ]
    }
  ]
}